# chat-bot

./: pyproject.toml  test.md  test_notebook.ipynb
app/: config.yaml  dynamodb_test.py  main.py
app/api/v1/endpoints/: assistants.py  auth.py  chat_messages.py  chat_sessions.py
app/core/: config.py  logging.py
app/db/: dynamodb.py
app/dependencies/: auth.py
app/exceptions/: custom_exceptions.py
app/langgraph_workflow/: langgraph_workflow_module.py
app/models/: assistant.py  chat_message.py  chat_session.py  user.py
app/services/: agent_service.py  assistant_service.py  auth_service.py  chat_message_service.py  chat_service.py
chat-management-ui/: package-lock.json  package.json
chat-management-ui/src/: index.js
chat-management-ui/src/api/: assistants.js  auth.js
chat-management-ui/src/components/Authentication/: SecuritySystem.js
chat-management-ui/src/pages/: Dashboard.js
chat-management-ui/src/routes/: AppRoutes.js
chat-management-ui/src/styles/: App.css
